feat: Conduit switch buttons in the GUI